--- a/README.textile
+++ b/README.textile
@@ -1,4 +1,4 @@
-A handful of functions, auto-complete helpers, and stuff that makes you shout...
+A handful of functions. auto-complete helpers, and stuff that makes you shout...
 
 
 bq. "OH MY ZSHELL!"
